--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #2c3748;
+  /* background: #2c3748; */
 }
 
 h1 {
@@ -18,11 +18,16 @@ header {
   min-height: 80vh;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 p {
   color: white;
 }
 section {
   min-height: 80vh;
+  background-color: grey
 }
 
 .about {
@@ -43,11 +48,20 @@ section {
   width: 50vh;
 }
 
-.projects {
-  background-color: grey
+.parallax {
+  background-attachment: fixed;
+  background-image: url("../public/birds-cold-conifer-917494.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%
 }
 
-.skills {
+.projects {
+
+}
+
+.knowledge {
   color: white
   text-align: center;
 }
