--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,6 +8,7 @@ a {
 }
 
 body {
+  position: relative;
   width: 100%;
 }
 
@@ -45,6 +46,10 @@ section {
 
 .about {
   text-align: center;
+}
+
+.active {
+  text-decoration: underline overline;
 }
 
 .card {
