--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -29,6 +29,7 @@ h3 {
 header {
   background-image: url("../images/abstract-blur-close-up.jpg");
   min-height: 80vh;
+  overflow-x: hidden;
 }
 
 html {
@@ -40,7 +41,7 @@ p {
   text-align: left;
 }
 section {
-  min-height: 80vh;
+  min-height: 100vh;
   background-color: #f8f9fa;
 }
 
@@ -50,6 +51,14 @@ section {
 
 .active {
   text-decoration: underline overline;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .card {
@@ -88,7 +97,9 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%
+  height: 100%;
+  /* transform: translateZ(-1px) scale(1.12);
+  z-index: -1; */
 }
 
 .projects {
