Reorder project listing on mobile
- Add media query and class to flex reverse column layout for projects 2
and 4.
- All projects exhibit same content order.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -170,3 +170,10 @@ section {
   margin: 4rem 4rem;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .content-reorder {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
